Fix : 'swiper-container'의 overflow 처리 오류 수정

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 /* VISUAL */
 .visual {
   margin-top: 120px;
-  background-image: url("../images/visual_bg.jpg");
+  background-image: url('../images/visual_bg.jpg');
   background-position: center;
 }
 .visual .inner {
@@ -172,7 +172,7 @@
 }
 .notice .promotion .swiper-pagination .swiper-pagination-bullet {
   background-color: transparent;
-  background-image: url("../images/promotion_slide_pager.png");
+  background-image: url('../images/promotion_slide_pager.png');
   width: 12px;
   height: 12px;
   margin-right: 6px;
@@ -182,7 +182,7 @@
   margin-right: 0px;
 }
 .notice .promotion .swiper-pagination .swiper-pagination-bullet-active {
-  background-image: url("../images/promotion_slide_pager_on.png");
+  background-image: url('../images/promotion_slide_pager_on.png');
 }
 .notice .promotion .swiper-prev,
 .notice .promotion .swiper-next {
@@ -235,7 +235,7 @@
   background-color: #d5c798;
 }
 .rewards .inner {
-  background-image: url("../images/rewards.jpg");
+  background-image: url('../images/rewards.jpg');
   height: 241px;
 }
 .rewards .btn-group {
@@ -274,14 +274,14 @@
   margin-top: calc(1920px * 9 / 16 / -2);
 }
 .youtube .youtube__area::before {
-  content: "";
+  content: '';
   display: block;
   width: 100%;
   height: 0;
   padding-top: 56.25%;
 }
 .youtube .youtube__cover {
-  background-image: url("../images//video_cover_pattern.png");
+  background-image: url('../images//video_cover_pattern.png');
   background-color: rgb(0, 0, 0, 0.3);
   position: absolute;
   top: 0;
@@ -312,7 +312,7 @@
 
 /* SEASON PRODUCT */
 .season-product {
-  background-image: url("../images/season_product_bg.jpg");
+  background-image: url('../images/season_product_bg.jpg');
 }
 .season-product .inner {
   height: 400px;
@@ -333,12 +333,10 @@
 .season-product .text-group .description {
   margin-bottom: 15px;
 }
-.season-product .text-group .more {
-}
 
 /* RESERVE COFFEE */
 .reserve-coffee {
-  background-image: url("../images/reserve_bg.jpg");
+  background-image: url('../images/reserve_bg.jpg');
 }
 .reserve-coffee .inner {
   height: 400px;
@@ -361,7 +359,7 @@
 
 /* PICK YOUR FAVORITE */
 .pick-your-favorite {
-  background-image: url("../images/favorite_bg.jpg");
+  background-image: url('../images/favorite_bg.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
@@ -385,7 +383,7 @@
 
 /* RESERVE STORE */
 .reserve-store {
-  background-image: url("../images/reserve_store_bg.jpg");
+  background-image: url('../images/reserve_store_bg.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
@@ -432,7 +430,7 @@
 
 /* FIND THE STORE */
 .find-store {
-  background-image: url("../images/find_store_bg.jpg");
+  background-image: url('../images/find_store_bg.jpg');
 }
 .find-store .inner {
   height: 400px;
@@ -528,4 +526,8 @@
   bottom: 30px;
   right: 30px;
   z-index: 9;
+}
+
+.swiper-container {
+  overflow: hidden;
 }
